# confidential-sheet-cover

./: .gitignore  README.ko.md  README.md  pyproject.toml
confidential_sheet_cover/: __init__.py  cli.py
